A little bug fix(TodoList wasn't scrolling down)

--- a/src/LeftSideApp/todoList.css
+++ b/src/LeftSideApp/todoList.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     gap: 10px;
     resize: horizontal;
-    overflow: hidden;
+    overflow: auto;
     min-width: 10vw;
 }
 .noteInItem{
